<resources>
    <string name="registration_title">Регистрация</string>
    <string name="registration_btn_title">Зарегистрироваться</string>
    <string name="registration_login_fld_hint">E-mail</string>
    <string name="registration_nickname_fld_hint">Никнейм</string>
    <string name="registration_password_fld_hint">Пароль</string>
    <string name="registration_password_repeat_fld_hint">Повторите пароль</string>
    <string name="registration_success_message">Вы успешно зарегистрировались</string>
    <string name="registration_rules_label">При регистрации вы соглашаетесь с правилами предоставления информации</string>
    <string name="registration_rules">правилами предоставления информации</string>
    <string name="login_title">Вход и регистрация</string>
    <string name="login_button_login_text">Войти</string>
    <string name="login_forget_password_label">Забыли пароль?</string>
    <string name="login_password_reset">Введите email, на который необходимо  отправить код для сброса пароля</string>
    <string name="login_password_reset_title">Сбросить пароль</string>
    <string name="login_password_reset_new_password_title">Придумайте новый пароль</string>
    <string name="login_password_reset_password_label">Сменить пароль</string>
    <string name="login_password_reset_new_password_label">Новый пароль</string>
    <string name="login_password_reset_password_invalid">Неверный пароль</string>
    <string name="login_password_reset_password_not_match">Пароли не совпадают</string>
    <string name="login_password_reset_success_label">Пароль успешно изменен</string>
    <string name="email_confirmation_btn_text">Подтвердить e-mail</string>
    <string name="email_confirmation_title">Введите код</string>
    <string name="email_confirmation_exit_confirmation_text">Вы действительно хотите выйти?</string>
    <string name="email_confirmation_code_hint">Код подтверждения</string>
    <string name="email_confirmation_send_code_again">Отправить код повторно</string>
    <string name="email_confirmation_code_remaining_time">Осталось времени: %1$s сек.</string>
    <string name="confirmation_title">Подтверждение</string>
    <string name="common_yes">Да</string>
    <string name="common_ok">Ок</string>
    <string name="common_no">Нет</string>
    <string name="common_close">Закрыть</string>
    <string name="common_error_handle">Ошибка в приложении</string>
    <string name="common_from">от</string>
    <string name="common_to">до</string>
    <string name="common_cancel">Отменить</string>
    <string name="common_back">Назад</string>
    <string name="common_create">Создать</string>
    <string name="common_email">E-mail</string>
    <string name="common_save">Сохранить</string>
    <string name="common_next">Продолжить</string>
    <string name="common_apply">Применить</string>
    <string name="common_send">Отправить</string>
    <string name="common_share">Поделиться</string>
    <string name="common_delete">Удалить</string>
    <string name="common_saving_process">Сохранение</string>
    <string name="common_next_short">Далее</string>
    <string name="tests_filters_label">Фильтры</string>
    <string name="error_email_empty">Поле email не может быть пустым</string>
    <string name="error_password_empty">Поле password не может быть пустым</string>
    <string name="error_title_creation_test_empty">Название теста не может быть пустым</string>
    <string name="error_title_creation_max_line">Максимальное число символов 64</string>
    <string name="app_update_required">Для продолжения работы необходимо обновить приложение до последней версии</string>
    <string name="tests_list_sort_field_title">Название</string>
    <string name="tests_list_sort_field_creation_date">Дата создания</string>
    <string name="tests_list_sort_field_published_date">Дата публикации</string>
    <string name="tests_list_sort_field_questions">Кол-во вопросов</string>
    <string name="tests_filters_title_label">Фильтры</string>
    <string name="tests_filters_question_type_label">Тип вопросов</string>
    <string name="tests_filters_questions_count_label">Количество вопросов</string>
    <string name="tests_filters_answer_time_label">Время ответа</string>
    <string name="tests_filters_theme_label">Тема</string>
    <string name="tests_filters_refresh_label">Сбросить</string>
    <string name="tests_filters_limited">Ограничено</string>
    <string name="tests_filters_unlimited">Без ограничений</string>
    <string name="test_creation_step_1">Шаг 1. Придумайте название</string>
    <string name="test_creation_step_2">Шаг 2. Выберите тему</string>
    <string name="test_creation_step_3">Шаг 3. Выберите цвет</string>
    <string name="test_creation_step_4">Выберите дизайн</string>
    <string name="test_creation_hint_input_name">Назовите этот тест</string>
    <string name="test_favorites_title">Мне нравится</string>
    <string name="test_library_title">Моя библиотека</string>
    <string name="test_favorites_empty">Ваша библиотека избранных тестов пуста</string>
    <string name="test_favorites_empty_description">Выбирайте понравившиеся тесты на главной странице и добавляйте в избранное</string>
    <string name="question_type_match">Соотвествие</string>
    <string name="question_type_answer">Выбор ответа</string>
    <string name="question_type_write_answer">Написать ответ</string>
    <string name="question_type_title">Выберите типа ответа</string>
    <string name="question_type_order">Изменение порядка</string>
    <string name="question_creation_answer_hint">Введите вариант ответа</string>
    <string name="question_creation_answer_write_hint">Введите правильный ответ здесь</string>
    <string name="question_match_answer_position_hint">Ответ %s</string>
    <string name="question_match_hint">Cоответствие</string>
    <string name="question_creation_save_data">Сохраняем вопрос…</string>
    <string name="question_number">Вопрос %s</string>
    <string name="question_time_title">Время вопроса</string>
    <string name="question_time_more_that_minute">%sм %sсек</string>
    <string name="question_time_only_minute">%sм</string>
    <string name="question_time_less_that_minute">%s сек</string>
    <string name="question_answer_max_length">Осталось символов: %s</string>
    <string name="library_published_title">Опубликованные</string>
    <string name="library_passed_title">Пройденные</string>
    <string name="library_draft_title">Черновики</string>
    <string name="library_empty_title">Ваша библиотека пуста</string>
    <string name="library_empty_description">Создавайте и публикуйте созданные тесты или проходите тесты из каталога</string>
    <string name="library_go_to_constructor">Перейти в конструктор</string>
    <string name="library_go_to_catalog">Перейти в каталог</string>
    <string name="test_preview_about_test_label">О тесте</string>
    <string name="test_preview_show_more">Показать полностью</string>
    <string name="test_preview_hide">Скрыть</string>
    <string name="test_preview_show_questions">Показать список вопросов</string>
    <string name="test_preview_hide_questions">Скрыть список вопросов</string>
    <string name="test_preview_pass_test">Пройти тест</string>
    <string name="test_preview_author_label">Автор</string>
    <string name="test_preview_author_tests_label">Другие тесты автора</string>
    <string name="questions_preview_title">Вопросы</string>
    <string name="test_settings_title">Настройки теста</string>
    <string name="test_settings_test_design">Обложка</string>
    <string name="test_style_color">Выберите цвет</string>
    <string name="test_settings_input_text">Название теста</string>
    <string name="test_settings_test_title">Название теста</string>
    <string name="test_settings_theme_title">Тема</string>
    <string name="test_settings_availability_title">Доступ к тесту</string>
    <string name="test_settings_order_title">Порядок вопросов</string>
    <string name="test_settings_min_correct_answer_title">Минимум правильных ответов для успешного прохождения теста</string>
    <string name="test_settings_min_correct_answer_hint">Количество ответов</string>
    <string name="test_settings_show_question_title">Предварительный просмотр вопросов</string>
    <string name="test_settings_anti_cheat_title">Антисписывание</string>
    <string name="test_settings_anti_cheat_description">Включенный режим “Антисписывание” позволяет фиксировать факт выхода приложения в фоновый режим. В таком режиме прохождение теста будет автоматически завершено.</string>
    <string name="test_settings_order_value_order">Последовательно</string>
    <string name="test_settings_order_value_random">Перемешать</string>
    <string name="test_settings_availability_all">Всем</string>
    <string name="test_settings_availability_link">По коду</string>
    <string name="test_draft">В черновик</string>
    <string name="test_draft_publish_description">Все настройки ваше теста будут сохранены, но он не будет доступен для прохождения. Вы сможете в любое время изменить это в разделе “Моя библиотека - Черновики”.</string>
    <string name="test_publish_description">После публикации тест станет доступен для прохождения, и вы сможете поделиться им.</string>
    <string name="test_publish">Опубликовать</string>
    <string name="test_save_test">Сохранить тест</string>
    <string name="test_exit_edit_title">Выход из редактирования теста</string>
    <string name="test_exit_edit_description">Вы уверены, что хотите покинуть страницу редактирования? Тест останется в статусе \"%s\"</string>
    <string name="test_exit_edit_draft">Черновик</string>
    <string name="test_exit_edit_ready">Опубликованный</string>
    <string name="test_question_delete_title">Вы действительно хотите удалить вопрос?</string>
    <string name="test_question_delete_description">Восстановить удаленный вопрос будет невозможно</string>
    <string name="test_delete_title">Удаление теста</string>
    <string name="test_delete_description">Вы уверены, что хотетите удалить тест? Восстановить удалённый тест будет невозможно</string>
    <string name="test_pending_title">Отложенная публикация</string>
    <string name="test_pending_description">Настройте дату и время публикации</string>
    <string name="test_edit_error_title">Ошибка при создании теста</string>
    <string name="question_creation_error_title">Ошибка при создании вопроса</string>
    <string name="test_edit_max_value_question">Количество вопросов не должно быть меньше %s</string>
    <string name="question_creation_validate_min_false_answer">Нужно выбрать хотя бы один неправильный ответ</string>
    <string name="question_creation_validate_empty">Содержание вопроса не может быть пустым</string>
    <string name="question_creation_validate_one_answer">Вопрос должен иметь хотя бы один ответ</string>
    <string name="question_creation_validate_min_count_answer">Минимальное количество ответов на вопрос должно быть равно %s-м</string>
    <string name="question_creation_validate_min_one_true_answer">Необходимо выбрать хотя бы один правильный ответ</string>
    <string name="question_creation_validate_answer_is_empty">В вопросе не должны присуствовать ответы с пустым содержанием</string>
    <string name="registration_empty_data">Для прохождение регистрации необходимо заполнить все поля в карточке</string>
    <string name="registration_password_not_match">Пароли не совпадают</string>
    <string name="test_pass_congratulations">Поздравляем!</string>
    <string name="test_pass_congratulations_description">Вы успешно прошли тест</string>
    <string name="test_pass_return_to_main_page">Вернуться на главную</string>
    <string name="code_share_description">Используйте этот код, чтобы поделиться тестом с другими</string>
    <string name="code_share_copy">Скопировать код</string>
    <string name="test_action_to_redaction">Перейти к редактированию</string>
    <string name="test_action_to_information">Перейти к информации</string>
</resources>