<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/test_pass_congratulations"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/Text.Label.Medium"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorTextGray"
        android:layout_marginHorizontal="24dp"
        android:text="@string/test_pass_congratulations_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIndicator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReturnToMainPage"
        style="@style/Button.Normal.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/test_pass_return_to_main_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>