<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/Text.Title"
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_confirmation_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.testeducation.ui.view.custom.InputTextPlaceHolder
        android:id="@+id/confirmationTextPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/txtConfirmation"
            style="@style/EditText.Input.Simple"
            android:layout_width="match_parent"
            android:hint="@string/email_confirmation_code_hint"
            android:background="@drawable/selector_input_text"
            android:layout_height="wrap_content" />

    </com.testeducation.ui.view.custom.InputTextPlaceHolder>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button.Normal.Green"
        android:id="@+id/btnConfirmEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_confirmation_btn_text"
        app:layout_constraintTop_toBottomOf="@+id/confirmationTextPlaceHolder"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/rootGroup"
        app:constraint_referenced_ids="btnConfirmEmail, confirmationTextPlaceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/globalProgress"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>